# streamlit-ftp

./: Dockerfile  README.md  app.py  config_example.py  pyproject.toml
